apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: apps
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        node.hardware.gpu: intel-igpu
      tolerations:
        - key: node.hardware.gpu
          operator: Equal
          value: intel-igpu
          effect: NoSchedule

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups:
          - 568
          - 44
          - 993
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
              gpu.intel.com/i915: "1"
            limits:
              memory: "6Gi"
              gpu.intel.com/i915: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
