apps/jellyfin/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.0.4
    ports:
      - port: 8096
