apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
